<resources>
    <string name="app_name">StoneTest</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cardNumber">Número do cartão</string>
    <string name="cardHolder">Nome</string>
    <string name="cardMonth">Mês validade</string>
    <string name="cardYear">Ano validade</string>
    <string name="cardBrand">Bandeira</string>
    <string name="cvv">CVV</string>
    <string name="value">Valor</string>
    <string name="transaction">Realizar Transação</string>
    <string name="sucess">Sucesso</string>
    <string name="required">Campo obrigatório</string>
    <string name="try_again">Ocorreu um erro. Tente novamente</string>
    <string name="wait">Aguarde</string>
    <string name="close">Fechar</string>
    <string name="canceled">Cancelado com sucesso</string>
    <string name="cancel_transaction">Cancelar transação</string>
    <string name="not_found">Você não realizou nenhuma transação</string>
</resources>
