<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="newTransaction"
            type="github.com.jcaiqueoliveira.stonetest.ViewModel.NewTransaction" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        tools:context=".View.NewTransactionFragment">

        <!-- TODO: Update blank fragment layout -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:background="@android:color/white"
            android:elevation="1dp"
            android:text="@string/hello_blank_fragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:setError="@{newTransaction.errorCardHolder}">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/cardHolder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cardHolder"
                        android:inputType="text"
                        android:maxLength="26"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:setError="@{newTransaction.errorCardNumber}">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/cardNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cardNumber"
                        android:inputType="number"
                        android:maxLength="19"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:setError="@{newTransaction.errorCardMonth}"
                        android:layout_weight="0.5">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/cardMonth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/cardMonth"
                            android:inputType="number"
                            android:maxLength="2"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:setError="@{newTransaction.errorCardYear}"
                        android:layout_weight="0.5">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/cardYear"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/cardYear"
                            android:inputType="number"
                            android:maxLength="2"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/cardBrand"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/cardBrand"
                            android:inputType="text"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:setError="@{newTransaction.errorCvv}"
                        android:layout_weight="0.5">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/cvv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/cvv"
                            android:inputType="number"
                            android:maxLength="4"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:setError="@{newTransaction.errorValue}">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/value"
                        android:inputType="number"
                        android:maxLength="6"
                        android:maxLines="1"
                        app:addTextChangedListener="@{newTransaction.getTextValue}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/transaction"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:inputType="numberDecimal"
                    android:onClick="@{newTransaction::newTransaction}"
                    android:text="@string/transaction" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>
</layout>